--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<ul>
-
-      <h2><app-listar></app-listar></h2>
-
-  </ul>
-
-  <router-outlet></router-outlet>
+<app-header></app-header>
+<div class="container">
+		<router-outlet></router-outlet>
+</div>
+	
