--- a/src/app/listar/listar.component.html
+++ b/src/app/listar/listar.component.html
@@ -1,29 +1,46 @@
 <div class="table-responsive">
-
-    <h2>Vehiculos activos</h2>
     <table class="table" mdbTable responsive="true">
         <thead class="grey lighten-1 black-text">
             <tr>
-              <th *ngFor="let head of headElements" scope="col">{{head}} </th>
+                <th *ngFor="let head of headElements" scope="col">{{head}} </th>
             </tr>
-          </thead>
-          <tbody>
-              <tr mdbTableCol *ngFor="let vehiculo of vehiculo">
+        </thead>
+        <tbody>
+            <tr mdbTableCol *ngFor="let vehiculo of vehiculos">
                 <td>{{vehiculo.tipoVehiculo}}</td>
                 <td>{{vehiculo.placa}}</td>
                 <td>{{vehiculo.fechaEntrada}}</td>
-                <td>{{vehiculo.fechaSalida}}</td>
                 <td>{{vehiculo.cilindraje}}</td>
-                <td>{{vehiculo.valorACobrar}}</td>
                 <td>
-                    <button class="btn btn-success" (click)="editBill(billOut)">
-                        Salida
-                        </button>
+                    <button  type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"> Retirar </button>
                 </td>
-              </tr>
-          </tbody>
+            </tr>
+        </tbody>
     </table>
-    
-    
-
 </div>
+
+<!-- Modal -->
+
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+        Launch demo modal
+      </button>
+      
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
