--- a/src/app/registrar/registrar.component.html
+++ b/src/app/registrar/registrar.component.html
@@ -18,9 +18,12 @@
                     </select>
                 </div>
                 <div class="wrap-contact100-form-range" [hidden]="vehiculo.tipoVehiculo != 'MOTO'">
-                    <span class="label-input100">Cilindraje *</span>
+                    <label>Cilindraje</label>
                     <input class="form-control input100" type="number" id="cilindraje" name="cilindraje" [(ngModel)]="vehiculo.cilindraje"
                         required="vehiculo.tipoVehiculo == 'MOTO'">
+                </div>
+                <div class="col">
+                   <button type="button" class="btn btn-outline-primary" (click)="registrarVehiculo(); vehiculoForm.reset()">REGISTRAR</button>
                 </div>
             </div>
         </form>
