--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,3 +1,8 @@
-<p>
-  dialog works!
-</p>
+<div class="dialogCard">
+  <h2 style="text-align: center">Valor a Pagar</h2> 
+  <h1 style="text-align: center">{{data.message}}</h1>
+
+  <div class="buttonContainer" style="align-content: center">
+    <button  class="btn btn-success btn-block" (click)="onClickPositiveResponse()">Aceptar</button>
+  </div>
+</div>
