--- a/src/app/registrar/registrar.component.html
+++ b/src/app/registrar/registrar.component.html
@@ -23,9 +23,11 @@
                         required="vehiculo.tipoVehiculo == 'MOTO'">
                 </div>
                 <div class="col">
-                   <button type="button" class="btn btn-outline-primary" (click)="registrarVehiculo(); vehiculoForm.reset()">REGISTRAR</button>
+                   <button type="button" data-toggle="modal" data-target="#exampleModal"  class="btn btn-outline-primary" (click)="registrarVehiculo(); vehiculoForm.reset()">REGISTRAR</button>
                 </div>
             </div>
         </form>
     </div>
 </div>
+
+<!----*/--> 
