--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,7 @@
 <section id="tabs">
   <div class="container">
-    <h6 class="section-title h1">Estacionamiento Ceiba</h6>
+    <h6 class="section-title h1">Estacionamiento Ceiba
+    <img class="img-responsive"  src="assets/images/logo-ceiba.png"/></h6>
     <div class="row">
       <div class="col-xs-12 ">
         <nav>
