--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,3 +1,6 @@
 <p>
-  login works!
+  <input type="email" [(ngmodel)]="user.email"/>
+  <input type="password" [(ngmodel)]="user.password"/>
+  <input type="text" [(ngmodel)]="user.username"/>
+  <button (click)="login()">login</button>
 </p>
